--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,90 @@
-.split-container {
+body {
+  font-family: 'Arial', sans-serif;
+  /* margin: 0;
+  padding: 0; */
+  background-color: #070111;
+  color: white;
+  background-image:
+  radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
+  radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
+  radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
+  radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+  background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px; 
+  background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+}
+
+.container {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
 }
 
-.left-section,
-.right-section {
-  flex: 1;
-  padding: 40px;
-}
-
-.left-section {
-  background-color: #3498db;
+.sidebar {
+  width: 250px;
+  background-color: #34304B;
   color: #fff;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+  /* margin-right: 20px; */
+  margin: 15px 35px 15px 25px;
+  border-radius: 6px;
 }
 
-.right-section {
-  background-color: #fff;
-  color: #333;
+
+.sidebar-container {
+  margin-top: 20px;
 }
+
+.content {
+  flex: 1;
+  padding: 20px;
+  height: 100vh;
+  overflow-y: auto;
+}
+
+/* Responsive styles */
+
+@media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .sidebar-container {
+    margin-right: 0;
+  }
+}
+
+.logo {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.nav-links a {
+  display: block;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  padding: 10px 20px;
+  transition: background-color 0.3s;
+}
+
+.nav-links a:hover {
+  background-color: #3c3756;
+}
+/* 
+.content {
+  flex: 1;
+  padding: 20px;
+  height: 100vh; /* Make the content take the full height of the viewport 
+  overflow-y: auto; /* Add scroll if content is longer than the viewport 
+*/
+
 
 .timeline {
   position: relative;
@@ -48,18 +115,6 @@
   margin-top: 10px;
 }
 
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f8f8f8;
-  color: #333;
-}
-
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
 .project-card {
   background-color: #fff;
   border-radius: 8px;
@@ -67,6 +122,7 @@ body {
   padding: 20px;
   margin-bottom: 20px;
   transition: transform 0.3s ease-in-out;
+  color: black;
 }
 
 .project-card:hover {
@@ -83,4 +139,8 @@ body {
   radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px; 
   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+}
+
+hr {
+  margin: 10px 30px;
 }
