--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,77 @@ body {
   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
 }
 
+header {
+  background-color: #302358;
+  color: #fff;
+  text-align: left;
+  padding: 2em;
+  align-items: center;
+  margin-top: 15px;
+}
+
+header img {
+  border-radius: 50%;
+  max-width: 150px;
+  max-height: 130px;
+  margin-right: 20px;
+  float: left;
+}
+
+section {
+  max-width: 800px;
+  margin: 2em auto;
+  padding: 2em;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1, h2 {
+  color: #ffffff;
+}
+
+h2 {
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 0.5em;
+  margin-bottom: 1em;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 0.5em;
+}
+
+a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+hr {
+  margin: 10px 30px;
+}
+
+.contact-item {
+  display: inline-block;
+  margin: 0 60px;
+  vertical-align: top;
+}
+
+.school-info {
+  margin-top: 1em;
+}
+
+.class-list {
+  margin-left: 20px;
+}
+
 .container {
   display: flex;
   min-height: 100vh;
@@ -20,7 +91,7 @@ body {
 
 .sidebar {
   width: 250px;
-  background-color: #34304B;
+  background-color: #302358;
   color: #fff;
   padding: 20px;
   box-sizing: border-box;
@@ -133,13 +204,6 @@ body {
   margin-top: 10px;
 }
 
-header {
-  background-color: #3498db;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
-}
-
 .project-carousel {
   /* display: flex; */
   justify-content: space-around;
@@ -226,8 +290,4 @@ header {
   radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px; 
   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
-}
-
-hr {
-  margin: 10px 30px;
 }
