--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@ hr {
 }
 
 .sidebar {
-  width: 250px;
+  width: 21%;
   background-color: #302358;
   color: #fff;
   padding: 20px;
@@ -115,8 +115,18 @@ hr {
 }
 
 /* Responsive styles */
+.hamburger-button {
+  display: none;
+  background-color: #E1E1E1;
+  border: none;
+  margin-bottom: 10px;
+  font-size: 24px;
+}
 
-@media screen and (max-width: 768px) {
+/* @media (max-width: 700px) {
+  
+} */
+@media /*screen and*/(max-width: 700px) {
   .container {
     flex-direction: column;
   }
@@ -129,6 +139,25 @@ hr {
   .sidebar-container {
     margin-right: 0;
   }
+  /* .hamburger-button {
+    position: fixed;
+    left: -100%;
+    transition: 0.3s;
+    width: 60%;
+    z-index: 1000;
+  }
+
+  .sidebar{
+    position: fixed;
+    left: -100%;
+    transition: 0.3s;
+    width: 60%;
+    z-index: 1000;
+  }
+
+  .sidebar.open {
+    left: 0;
+  } */
 }
 
 .logo {
@@ -217,39 +246,6 @@ hr {
   padding: 20px;
   color: white;
 }
-
-/* .project-box {
-  background-color: #1b0238;
-  padding: 20px;
-  margin: 20px 0;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease-in-out;
-  text-align: center;
-  width: 560px;
-}
-
-.project-box h3 {
-  margin-bottom: 10px;
-}
-
-.image-carousel {
-  display: flex;
-  justify-content: center;
-  /* justify-content: space-between; 
-  margin-bottom: 15px;
-}
-
-.image-carousel img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 8px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
-.project-box p {
-  text-align: center;
-} */
 
 .project-box {
   background-color: #1b0238;
